Fixed background animation covering navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -463,57 +463,6 @@ ul li a:hover:after {
   display: none;
 }
 
-#about {
-  height: 800px;
-  text-align: center;
-}
-#about hr {
-  position: relative;
-  margin-top: -333px;
-}
-#about #about-content {
-  background-color: #151b26;
-  width: 70%;
-  height: 600px;
-  background: radial-gradient(circle at 100% 100%, #151b26 0, #151b26 20px, transparent 20px) 0% 0%/25px 25px no-repeat, radial-gradient(circle at 0 100%, #151b26 0, #151b26 20px, transparent 20px) 100% 0%/25px 25px no-repeat, radial-gradient(circle at 100% 0, #151b26 0, #151b26 20px, transparent 20px) 0% 100%/25px 25px no-repeat, radial-gradient(circle at 0 0, #151b26 0, #151b26 20px, transparent 20px) 100% 100%/25px 25px no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 10px) calc(100% - 50px) no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 50px) calc(100% - 10px) no-repeat, #00bfff;
-  border-radius: 25px;
-  padding: 7px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  border-radius: 25px;
-  transition: 300ms;
-}
-#about #about-content:hover {
-  background: radial-gradient(circle at 100% 100%, #151b26 0, #151b26 20px, transparent 20px) 0% 0%/25px 25px no-repeat, radial-gradient(circle at 0 100%, #151b26 0, #151b26 20px, transparent 20px) 100% 0%/25px 25px no-repeat, radial-gradient(circle at 100% 0, #151b26 0, #151b26 20px, transparent 20px) 0% 100%/25px 25px no-repeat, radial-gradient(circle at 0 0, #151b26 0, #151b26 20px, transparent 20px) 100% 100%/25px 25px no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 10px) calc(100% - 50px) no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 50px) calc(100% - 10px) no-repeat, #00bfff;
-  -webkit-box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
-  -moz-box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
-  box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
-}
-#about ul {
-  columns: 1;
-  width: 500px;
-  text-align: start;
-  justify-content: center;
-  margin: 0 auto;
-  padding-inline-start: 0;
-  list-style-type: none;
-  display: grid;
-  row-gap: 60px;
-  margin-top: 50px;
-}
-#about ul li {
-  margin: 0 auto;
-}
-#about ul li img {
-  width: 500px;
-}
-#about #about-text-list {
-  list-style-type: disc;
-  font-size: 25px;
-  width: 610px;
-  margin-top: 0px;
-}
-
 .area {
   background: #4e54c8;
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
@@ -522,10 +471,10 @@ ul li a:hover:after {
 
 .circles {
   position: absolute;
-  top: 0;
+  top: 70px;
   left: 0;
   width: 100%;
-  height: 99%;
+  height: 91.5%;
   overflow: hidden;
 }
 
@@ -626,6 +575,56 @@ ul li a:hover:after {
     opacity: 0;
     border-radius: 50%;
   }
+}
+#about {
+  height: 800px;
+  text-align: center;
+}
+#about hr {
+  position: relative;
+  margin-top: -333px;
+}
+#about #about-content {
+  background-color: #151b26;
+  width: 70%;
+  height: 600px;
+  background: radial-gradient(circle at 100% 100%, #151b26 0, #151b26 20px, transparent 20px) 0% 0%/25px 25px no-repeat, radial-gradient(circle at 0 100%, #151b26 0, #151b26 20px, transparent 20px) 100% 0%/25px 25px no-repeat, radial-gradient(circle at 100% 0, #151b26 0, #151b26 20px, transparent 20px) 0% 100%/25px 25px no-repeat, radial-gradient(circle at 0 0, #151b26 0, #151b26 20px, transparent 20px) 100% 100%/25px 25px no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 10px) calc(100% - 50px) no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 50px) calc(100% - 10px) no-repeat, #00bfff;
+  border-radius: 25px;
+  padding: 7px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  border-radius: 25px;
+  transition: 300ms;
+}
+#about #about-content:hover {
+  background: radial-gradient(circle at 100% 100%, #151b26 0, #151b26 20px, transparent 20px) 0% 0%/25px 25px no-repeat, radial-gradient(circle at 0 100%, #151b26 0, #151b26 20px, transparent 20px) 100% 0%/25px 25px no-repeat, radial-gradient(circle at 100% 0, #151b26 0, #151b26 20px, transparent 20px) 0% 100%/25px 25px no-repeat, radial-gradient(circle at 0 0, #151b26 0, #151b26 20px, transparent 20px) 100% 100%/25px 25px no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 10px) calc(100% - 50px) no-repeat, linear-gradient(#151b26, #151b26) 50% 50%/calc(100% - 50px) calc(100% - 10px) no-repeat, #00bfff;
+  -webkit-box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
+  -moz-box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
+  box-shadow: 0px 0px 65px -10px rgb(0, 191, 255);
+}
+#about ul {
+  columns: 1;
+  width: 500px;
+  text-align: start;
+  justify-content: center;
+  margin: 0 auto;
+  padding-inline-start: 0;
+  list-style-type: none;
+  display: grid;
+  row-gap: 60px;
+  margin-top: 50px;
+}
+#about ul li {
+  margin: 0 auto;
+}
+#about ul li img {
+  width: 500px;
+}
+#about #about-text-list {
+  list-style-type: disc;
+  font-size: 25px;
+  width: 610px;
+  margin-top: 0px;
 }
 
 /*# sourceMappingURL=styles.css.map */
